    gforge/packaging/{dirs,install,cron.d,control}/* rather than the
    previous gforge/{dirs,install,cron.d,control}/*.

 -- Roland Mas <lolando@debian.org>  Wed, 29 Apr 2009 15:21:31 +0200
  
gforge (4.8~rc1-1+2) experimental; urgency=low

  * New upstream snapshot.
  * install-chroot.sh: do not fail if device nodes can't be created (such
    as when operating in a vserver).

 -- Roland Mas <lolando@debian.org>  Mon, 04 May 2009 15:05:23 +0200

gforge (4.8~rc1-1) experimental; urgency=low

  [ Christian Bayle ]
  * Removed all files from /usr/lib/gforge and put them in /usr/share/gforge
  * cron scripts ar now in /usr/share/gforge/cronjobs
  * Now generate *.cron.d *.dirs *.install from cron.d/dirs/install dirs
  * Use dh_install instead of copy in rules

  [ Roland Mas ]
  * Fixed a bunch of lintian warnings.
  * Added logrotate configuration file for vhosts access logs.
  * New upstream release candidate.

 -- Roland Mas <lolando@debian.org>  Tue, 28 Apr 2009 15:33:18 +0200

gforge (4.7.2-7+2) unstable; urgency=low

  * Added watch file.
  * Fixed copyright file to mention FusionForge.
  * Fixed group join request only sending a notification email to one of
    the project admins.

 -- Roland Mas <lolando@debian.org>  Mon, 04 May 2009 18:35:41 +0200

gforge (4.7.2-7) unstable; urgency=low

  * Added Debconf template translations for Spanish (closes: #519066).
  * Do not fail in prerm if the user removed the vhost file from Apache's
    config (closes: #516579).
  * Don't display the link to the SVN browser for projects where anonymous
    checkout is disabled since it won't work anyway (Closes: #514613).
  * Updated Vcs-* fields in debian/control.
  * Also replaced GForge with FusionForge in debian/control (although the
    packages are still called gforge-* for now).
  * First upload to unstable since the FusionForge 4.7 release.

 -- Roland Mas <lolando@debian.org>  Wed, 15 Apr 2009 14:55:01 +0200

gforge (4.7.2-6) experimental; urgency=low
